<resources>
    <string name="app_name">Nutrition   Guide...</string>
    <string name="log_in">Log-In Now...</string>
    <string name="about">About Us</string>
    <string name="contact">Contact Us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="message">Message</string>
    <string name="submit">Send</string>
    <string name="contact_us">Leave a Message</string>
    <string name="pass">Password</string>
    <string name="Newuser">New User?</string>
    <string name="signup">Sign Up</string>
    <string name="developer">RK University</string>
    <string name="user_name">www.rku.ac.in</string>
    <string name="email_id">example@rku.ac.in</string>
    <string name="phone">Phone</string>
    <string name="phone_no">+91 987-654-321</string>
    <string name="Company">Company Name</string>
    <string name="company_name">RK University</string>
    <string name="playstore">Play Store</string>
    <string name="playstore_id">com.rku.ac.in</string>

</resources>