<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryTextColor"
    tools:context=".About_as"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryTextColor"
        tools:context=".About_as">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/ic_about_wave"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="131dp"
                    android:layout_height="168dp"
                    android:layout_marginBottom="50dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="195dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="195dp"
                    android:layout_marginTop="50dp"
                    android:elevation="30dp"


                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.681"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:srcCompat="@drawable/rku_logo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/user_name"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="20sp"
                    android:typeface="serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView5"
                    app:layout_constraintHorizontal_bias="0.239"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.434" />

                <TextView
                    android:id="@+id/textView_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/developer"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp"

                    android:textStyle="bold"
                    android:typeface="serif"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView5"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.26999998" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"

                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"

                    android:padding="10dp">

                    <ImageView

                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/dialog_bg"
                        android:elevation="5dp"
                        android:padding="5dp"

                        app:srcCompat="@drawable/ic_baseline_email_24"
                        tools:ignore="VectorDrawableCompat" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/text_email"
                            style="@style/aboutTextMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email"

                            />

                        <TextView
                            style="@style/aboutTextsub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/email_id" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="20dp"
                    android:padding="10dp">

                    <ImageView

                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/dialog_bg"
                        android:elevation="5dp"
                        android:padding="5dp"

                        app:srcCompat="@drawable/ic_baseline_phone_24"
                        tools:ignore="VectorDrawableCompat" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            style="@style/aboutTextMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone" />

                        <TextView
                            style="@style/aboutTextsub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_no" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="20dp"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/dialog_bg"
                        android:elevation="5dp"
                        android:padding="5dp"

                        app:srcCompat="@drawable/ic_baseline_domain_24"
                        tools:ignore="VectorDrawableCompat" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView
                            style="@style/aboutTextMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Company" />

                        <TextView
                            style="@style/aboutTextsub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/company_name" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_marginTop="20dp"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/dialog_bg"
                        android:elevation="5dp"
                        android:padding="5dp"

                        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
                        tools:ignore="VectorDrawableCompat" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            style="@style/aboutTextMain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/playstore" />

                        <TextView
                            style="@style/aboutTextsub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/playstore_id" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>