<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center"
    tools:context=".Login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:elevation="20dp"
                android:src="@drawable/login_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></ImageView>

            <LinearLayout
                android:id="@+id/mainCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/dialog_bg"
                android:elevation="15dp"
                android:gravity="end"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">
                <TextView
                    android:id="@+id/contact_form_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="20dp"
                    android:elevation="8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/log_in"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"

                    android:typeface="serif" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/form_bg"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:padding="10dp"></EditText>


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/form_bg"
                    android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                    android:drawablePadding="10dp"
                    android:elevation="30dp"
                    android:hint="@string/pass"
                    android:padding="10dp"></EditText>

                <ImageView
                    android:id="@+id/submit"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="end"



                    android:layout_marginTop="20dp"
                    android:background="@drawable/dialog_bg"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:src="@drawable/ic_baseline_arrow_forward_24"></ImageView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal"


                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/Newuser"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.353"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.502" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/signup"
                    android:textColor="@color/slogan"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.665"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="0.502" />

            </LinearLayout>



        </LinearLayout></ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>